# python-project-50

./: Makefile  README.md  gendiff.py  pyproject.toml  setup.cfg
.github/workflows/: main.yml
gendiff/: format_stylish.py  gendiff_cli.py  parse_file.py
gendiff/scripts/: gendiff.py
gendiff/test/: test_gendiff.py
test/: test_generate_diff.py
test/fixtures/: expected_diff_json.txt  expected_diff_stylish.txt  test_file2.yml
