[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"


[tool.poetry.scripts]
gendiff = "gendiff.gendiff_cli:main"




[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
